--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.3.4",
     "vue": "^3.2.45",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
