--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/coreui": "^4.2.6",
+    "@coreui/vue": "^4.7.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@vueuse/core": "^9.13.0",
     "axios": "^1.3.4",
-    "vue": "^3.2.45",
+    "swiper": "^9.0.5",
+    "vue": "^3.2.36",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^4.0.13",
+    "vue-spinners": "^1.0.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
