--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@vueuse/core": "^9.13.0",
     "axios": "^1.3.4",
+    "firebase": "^9.17.1",
     "swiper": "^9.0.5",
     "vue": "^3.2.36",
     "vue-carousel": "^0.18.0",
